Armitage Changelog
==================

14 Feb 12
---------
- Added ports 5631 (pc anywhere) and 902 (vmauthd) to the MSF Scans feature.
- Several cosmetic tweaks to the spacing in Armitage tables.
- Moved table render code from Sleep to Java to avoid potential lock conflicts
- Added support for vba-exe payload output type.
- Payload generation dialog now sets more appropriate default options for the
  vba output type when it is selected.
- Meterp command shell "read more stuff?" heuristic now accounts for Yes/No/All
- Fixed ExitOnSession showing up twice when setting advanced options for a 
  client-side exploit
- You may now import multiple files through Hosts -> Import again.
- Added 5s timeout to d-server connect attempt.
- Added a --client [connect.properties] to specify which Metasploit server to 
  connect to. The connect.properties file is a Java properties file that looks
  like this (without the leading whitespace):

  host=127.0.0.1
  port=55553
  user=msf
  pass=test

19 Jan 12
---------
- Data export now includes a sessions file. This lists all of the Metasploit
  sessions you had in your database. There's some neat data here including
  which exploit was used, which payload, start time, and close time. You can
  calculate how much time you spent on your client's boxes. Cool stuff.
- Fixed a potential dead-lock caused by mouse enter/exit events firing code
  that required a lock. Nice landmine to defuse.
- Fixed a weird condition with d-server detection. Sometimes (rarely)
  Armitage wouldn't detect the d-server even when it's present.
- Added check to d-server allowing one lock per/client. Client won't reobtain
  a lock until it lets it go. This prevents you from opening two shell tabs
  for a shell session in team mode.
- Fixed an infinite loop condition when some Windows shell commands would
  return output with no newlines (e.g., net stop [some service]). Thanks
  Jesse for pointing me to this one.